<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textColor="@color/top"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/edit_text"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password_again"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text"
            android:hint="@string/password_again"
            android:inputType="textPassword" />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_type"
            android:layout_marginTop="10dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:checkedButton="@+id/radio_organisation" >

            <RadioButton
                android:id="@+id/radio_organisation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radio_organisation" />

            <RadioButton
                android:id="@+id/radio_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radion_personal" />
        </RadioGroup>

        <Button
            android:id="@+id/next"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="next"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>