<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center|top" >

            <EditText
                android:id="@+id/first_name"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/firs_name_hint"
                android:layout_marginTop="10dp" />
            

            <EditText
                android:id="@+id/last_name"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/last_name_hint"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/position"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/position_hint"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/business_phone"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/business_phone_hint"
                android:inputType="phone"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/personal_phone"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/personal_phone_hint"
                android:inputType="phone"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/skype"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/skype_hint"
                android:inputType="text"
                android:layout_marginTop="10dp" />
            
            <EditText
                android:id="@+id/facebook"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/facebook_hint"
                android:inputType="text"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/register_user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="saveUserProfile"
                android:text="@string/save"
                android:layout_marginTop="50dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>